--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-dash=3.1.1
-dash-bootstrap-components=1.6.0
-dash-core-components=2.0.0
-dash-html-components=2.0.0
-dash-mantine-components=2.1.0
-dash-table=5.0.0
-flask=3.0.3
-numpy=1.26.4
-pandas=2.2.1
-plotly=5.24.1
-pip=23.3.1
+dash==3.1.1
+dash-bootstrap-components==1.6.0
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-mantine-components==2.1.0
+dash-table==5.0.0
+flask==3.0.3
+numpy==1.26.4
+pandas==2.2.1
+plotly==5.24.1
+pip==23.3.1
